<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingFragment">

    <!-- TODO: Update blank fragment layout -->





    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_size_sm"
        android:layout_marginTop="184dp"
        android:layout_marginRight="@dimen/text_size_sm"
        android:height="54dp"
        android:backgroundTint="@color/white"
        android:drawableRight="@drawable/baseline_logout_24"
        android:gravity="center|center_horizontal"
        android:text="@string/logout"
        android:textColor="@color/red_300"
        app:cornerRadius="@dimen/text_size_sm"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:strokeColor="@color/red_300"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/lobster_regular"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xxl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="Liên hệ với Hamburger BunBuzz"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="267dp"
        android:layout_height="72dp"
        android:layout_marginLeft="@dimen/text_size_sm"
        android:layout_marginTop="36dp"
        android:layout_marginRight="@dimen/text_size_sm"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/instagram"
            android:scaleType="fitCenter"
            android:src="@drawable/facebook" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/email"
            android:scaleType="fitCenter"
            android:src="@drawable/gmail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="3"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/facebook"
            android:scaleType="fitCenter"
            android:src="@drawable/instagram"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>