
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:backgroundTint="@null"
    android:paddingHorizontal="@dimen/text_size_md">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_xxl"
        android:fontFamily="@font/lobster_regular"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xl"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="@dimen/text_size_lg" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapper_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/text_size_sm"
            style="@style/layout_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_login"
           >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_size_xxl"
                android:layout_marginTop="@dimen/text_size_lg"
                android:layout_marginBottom="@dimen/text_size_md"
                style="@style/edt"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapper_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/layout_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrapper_layout_email"
          >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/edt_password"
                android:layout_height="@dimen/text_size_xxl"
                android:inputType="textPassword|text"
                style="@style/edt"
              />
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/layout_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_lg"
        android:gravity="center"
        android:orientation="horizontal"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper_layout_password">



        <TextView
            android:id="@+id/sign_in_text_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text=""
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/txt_color_red"
            android:textSize="@dimen/text_size_md"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_lg"
        style="@style/btn_normal"
        android:text="@string/login"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_more" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="314dp"
        android:layout_height="@dimen/text_size_xl"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/text_size_lg"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_size_lg"
            android:layout_gravity="start"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/no_account"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_md"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_black"
            android:text="@string/register"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_md"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_continue_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_lg"
        android:drawableStart="@drawable/google"
        android:text="@string/contine_google"
        style="@style/btn_stroke_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
       />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="27dp"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/text_size_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />



</androidx.constraintlayout.widget.ConstraintLayout>